# docs/swagger.json
@@ -1,8 +1,19 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {},
-        "license": {}
+        "description": "使用gin框架开发的前后端分离的web项目.",
+        "title": "gin blog",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
     "paths": {
         "/api/v1/tags": {
@@ -108,7 +119,7 @@
             }
         },
         "/auth": {
-            "get": {
+            "post": {
                 "produces": [
                     "application/json"
                 ],
@@ -119,22 +130,29 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "用户名",
+                        "description": "用户名(eg:test)",
                         "name": "username",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "密码",
+                        "description": "密码(eg:test123456)",
                         "name": "password",
                         "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码(eg:limq)",
+                        "name": "yzm",
+                        "in": "formData",
                         "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "description": "{\"code\":200,\"data\":{\"token\":\"xxx\"},\"msg\":\"success\"}",
                         "schema": {
                             "type": "string"
                         }
