# routers/api/auth.go
@@ -13,21 +13,24 @@ import (
 type auth struct {
 	Username string `valid:"Required;MaxSize(50)"`
 	Password string `valid:"Required;MaxSize(50)"`
+	Yzm      string `valid:"Required;MaxSize(50)"`
 }
 
 // @Summary 获取token
 // @tags auth
 // @Produce  json
-// @Param username query string true "用户名"
-// @Param password query string true "密码"
-// @Success 200 {string} string "{"code":200,"data":{},"msg":"ok"}"
-// @Router /auth [get]
+// @Param username query string true "用户名(eg:test)"
+// @Param password query string true "密码(eg:test123456)"
+// @Param yzm formData string true "密码(eg:limq)"
+// @Success 200 {string} string "{"code":200,"data":{"token":"xxx"},"msg":"success"}"
+// @Router /auth [post]
 func GetAuth(c *gin.Context) {
 	username := c.Query("username")
 	password := c.Query("password")
+	yzm := c.PostForm("yzm")
 
 	valid := validation.Validation{}
-	a := auth{Username: username, Password: password}
+	a := auth{Username: username, Password: password, Yzm: yzm}
 
 	ok, _ := valid.Valid(&a)
 
